--- a/project 2/frontend/angular.json
+++ b/project 2/frontend/angular.json
@@ -29,11 +29,18 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "karmaConfig": "karma.conf.js",
             "tsConfig": "tsconfig.spec.json"
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "1cdb9e92-debf-4f2d-9f57-9bd792f10760"
   }
 }
