--- a/.github/workflows/ci-project3.yml
+++ b/.github/workflows/ci-project3.yml
@@ -139,54 +139,4 @@ jobs:
         run: echo "Deployed to DEV - Backend: https://api-dev-project-03.azurewebsites.net | Frontend: https://web-dev-project-03.azurewebsites.net"
 
   # Job 5: Deploy to Production (DISABLED - will be enabled later)
-  # deploy-prod:
-  #   needs: deploy-dev
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/main' && success()
-  #   environment: production
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Download backend artifact
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: backend-publish
-  #         path: ./backend-dist
-  #
-  #     - name: Download frontend artifact
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: frontend-dist
-  #         path: ./frontend-dist
-  #
-  #     - name: Display artifacts
-  #       run: |
-  #         echo "=== Backend Files for PRODUCTION ==="
-  #         ls -la ./backend-dist
-  #         echo ""
-  #         echo "=== Frontend Files for PRODUCTION ==="
-  #         ls -la ./frontend-dist
-  #
-  #     - name: Deploy backend to Prod App Service
-  #       uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'api-prod-project-03'
-  #         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
-  #         package: ./backend-dist
-  #
-  #     - name: Deploy frontend to Prod App Service
-  #       uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'web-prod-project-03'
-  #         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND_PROD }}
-  #         package: ./frontend-dist
-  #
-  #     - name: Health Check Prod Backend
-  #       run: |
-  #         echo "Waiting for backend to start..."
-  #         sleep 30
-  #         curl -f https://api-prod-project-03.azurewebsites.net/api/health || echo "Health check failed"
-  #
-  #     - name: Display Deploy Complete
-  #       run: echo "✅ Deployed to PRODUCTION - Backend: https://api-prod-project-03.azurewebsites.net | Frontend: https://web-prod-project-03.azurewebsites.net"
+  # Uncomment the deploy-prod job when ready for production deployment
