--- a/.github/workflows/ci-project3.yml
+++ b/.github/workflows/ci-project3.yml
@@ -1,139 +1,82 @@
-name: CI/CD - Project 3 (.NET + Frontend)
+name: CI/CD - Project 3
 
 on:
   push:
-    paths: ['project 3/**']
-  pull_request:
-    paths: ['project 3/**']
-  workflow_dispatch: {}
+    branches: [main]
+    paths:
+      - 'project 3/**'
+  workflow_dispatch:
 
 jobs:
-  # Job 1: Build and publish .NET backend
   build-backend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup .NET 8
-        uses: actions/setup-dotnet@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore backend dependencies
+          dotnet-version: 8.0.x
+      - run: dotnet restore
         working-directory: project 3/backend
-        run: dotnet restore
-
-      - name: Build backend
+      - run: dotnet build -c Release --no-restore
         working-directory: project 3/backend
-        run: dotnet build --configuration Release --no-restore
-
-      - name: Publish backend
+      - run: dotnet publish -c Release -o publish
         working-directory: project 3/backend
-        run: dotnet publish -c Release -o ./publish
-
-      - name: Upload backend artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: backend-publish
           path: project 3/backend/publish
 
-  # Job 2: Build frontend
   build-frontend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '18'
-
-      - name: Install frontend dependencies
+          node-version: 18
+      - run: npm install
         working-directory: project 3/frontend
-        run: npm install
-
-      - name: Build frontend
+      - run: npm run build
         working-directory: project 3/frontend
-        run: npm run build
-
-      - name: Upload frontend artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: frontend-dist
           path: project 3/frontend/src
 
-  # Job 3: Run backend tests
   test-backend:
     runs-on: ubuntu-latest
     needs: build-backend
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup .NET 8
-        uses: actions/setup-dotnet@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
-
-      - name: Restore test dependencies
+          dotnet-version: 8.0.x
+      - run: dotnet restore
         working-directory: project 3/Tests
-        run: dotnet restore
-
-      - name: Run backend tests
+      - run: dotnet test --verbosity normal
         working-directory: project 3/Tests
-        run: dotnet test --verbosity normal
 
-  # Job 4: Deploy to Dev (automatic on main)
   deploy-dev:
-    needs: [build-backend, build-frontend, test-backend]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && success()
+    needs: [build-backend, build-frontend, test-backend]
+    if: github.ref == 'refs/heads/main'
     environment: dev
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download backend artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
           name: backend-publish
           path: ./backend-dist
-
-      - name: Download frontend artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: frontend-dist
           path: ./frontend-dist
-
-      - name: Display artifacts
-        run: |
-          echo "=== Backend Files ==="
-          ls -la ./backend-dist
-          echo ""
-          echo "=== Frontend Files ==="
-          ls -la ./frontend-dist
-
-      - name: Deploy backend to Dev App Service
-        uses: azure/webapps-deploy@v2
+      - uses: azure/webapps-deploy@v2
         with:
-          app-name: 'api-dev-project-03'
+          app-name: api-dev-project-03
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV }}
           package: ./backend-dist
-
-      - name: Deploy frontend to Dev App Service
-        uses: azure/webapps-deploy@v2
+      - uses: azure/webapps-deploy@v2
         with:
-          app-name: 'web-dev-project-03'
+          app-name: web-dev-project-03
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND_DEV }}
           package: ./frontend-dist
-
-      - name: Health Check Dev Backend
-        run: |
-          echo "Waiting for backend to start..."
-          sleep 30
-          curl -f https://api-dev-project-03.azurewebsites.net/api/health || echo "Health check failed"
-
-      - name: Display Deploy Complete
-        run: echo "Deployed to DEV - Backend https://api-dev-project-03.azurewebsites.net"
