--- a/.github/workflows/ci-project4.yml
+++ b/.github/workflows/ci-project4.yml
@@ -63,7 +63,7 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build React app
         run: npm run build
