--- a/.github/workflows/ci-project4.yml
+++ b/.github/workflows/ci-project4.yml
@@ -2,12 +2,11 @@ name: CI - Project 4
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths: ['project 4/**']
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths: ['project 4/**']
-  workflow_dispatch: {}
 
 env:
   REGISTRY: docker.io
@@ -15,80 +14,49 @@ env:
   FRONTEND_IMAGE: ${{ secrets.DOCKER_USERNAME }}/project4-frontend
 
 jobs:
-  # Job 1: Test Backend
   test-backend:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: project 4/backend
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
           cache: 'pip'
-
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-cov flake8
+      - run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
+      - run: pytest tests/ --cov=. --cov-report=xml || true
 
-      - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics || true
-
-      - name: Run Python tests
-        run: |
-          pytest tests/ --cov=. --cov-report=xml || true
-
-  # Job 2: Test Frontend
   test-frontend:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: project 4/frontend
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '18'
+      - run: npm install
+      - run: npm run build
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build React app
-        run: npm run build
-
-  # Job 3: Build and Push Backend to Docker Hub
   build-backend:
     needs: test-backend
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push backend
-        uses: docker/build-push-action@v4
+      - uses: docker/build-push-action@v4
         with:
           context: project 4/backend
           file: project 4/backend/Dockerfile
@@ -97,27 +65,18 @@ jobs:
             ${{ env.BACKEND_IMAGE }}:latest
             ${{ env.BACKEND_IMAGE }}:${{ github.sha }}
 
-  # Job 4: Build and Push Frontend to Docker Hub
   build-frontend:
     needs: test-frontend
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push frontend
-        uses: docker/build-push-action@v4
+      - uses: docker/build-push-action@v4
         with:
           context: project 4/frontend
           file: project 4/frontend/Dockerfile
@@ -126,4 +85,4 @@ jobs:
             ${{ env.FRONTEND_IMAGE }}:latest
             ${{ env.FRONTEND_IMAGE }}:${{ github.sha }}
 
-  
+
