--- a/.github/workflows/ci-project4.yml
+++ b/.github/workflows/ci-project4.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches: [main, develop]
     paths: ['project 4/**']
+  workflow_dispatch: {}
 
 env:
   REGISTRY: docker.io
