Fix workflow YAML syntax

--- a/project 4/frontend/.eslintrc.json
+++ b/project 4/frontend/.eslintrc.json
@@ -2,6 +2,6 @@
   "extends": ["react-app"],
   "rules": {
     "no-unused-vars": "warn",
-    "no-console": "warn"
+    "no-console": ["warn", { "allow": ["error"] }]
   }
 }
