--- a/project 4/backend/Dockerfile
+++ b/project 4/backend/Dockerfile
@@ -1,4 +1,4 @@
-# Backend Dockerfile
+﻿# Backend Dockerfile
 FROM python:3.9-slim
 
 # Set working directory
@@ -9,11 +9,25 @@ ENV PYTHONUNBUFFERED=1
 ENV FLASK_APP=app.py
 ENV FLASK_ENV=production
 
-# Install system dependencies and ODBC driver for Azure SQL
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    g++ \
     unixodbc-dev \
+    curl \
+    gnupg \
+    apt-transport-https \
     && rm -rf /var/lib/apt/lists/*
+
+# Install Microsoft ODBC Driver 17 for SQL Server
+RUN curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor -o /usr/share/keyrings/microsoft-prod.gpg \
+    && echo "deb [signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/debian/11/prod bullseye main" > /etc/apt/sources.list.d/mssql-release.list \
+    && apt-get update \
+    && ACCEPT_EULA=Y apt-get install -y msodbcsql17 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Verify ODBC driver installed
+RUN odbcinst -q -d
 
 # Copy requirements first for better caching
 COPY requirements.txt .
@@ -36,5 +50,6 @@ RUN python init_db.py || true
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:5000/api/health')" || exit 1
+
 # Run the application with gunicorn
 CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "--timeout", "120", "app:app"]
